--- a/style.css
+++ b/style.css
@@ -44,22 +44,24 @@ body * {
 
 
 #container {
-    width: 360px;
+    width: 100%;
+    max-width: 588px;
     margin: 56px auto 0px;
-    padding: 0 24px;
+    padding: 0 24px ;
+    
 }
 
-/* profile*/
+/* profile */
 
 #profile {
    text-align: center; 
    padding: 24px;
-   margin-top: 8px;
+
 }
 
 #profile img {
     width: 112px;
-    margin: auto
+   
 }
 #profile p {
     font-weight: 500;
