--- a/style.css
+++ b/style.css
@@ -187,7 +187,7 @@ footer {
  
 
 /* media queries */
-@media (min-widht: 700px) {
+@media (min-width: 700px) {
     :root {
         --bg-url: url(./assets/bg-desktop.jpg);
     }
